@@ -1,3 +1,7 @@
+12/17/2018
+- don't select one of the jwt token auth methods if the required key
+  material is not present; see #238
+
 11/13/2018
 - fixed a bad error return value in certain setups of
   bearer_jwt_verify; see #234; thanks @JoshTheGoldfish
